# gr-howtogen

./: CMakeLists.txt  README.md
cmake/Modules/: howtogenConfig.cmake
docs/: README.howtogen
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: square_test.grc  top_block.py
grc/: CMakeLists.txt  howtogen_square_xx.xml
include/howtogen/: CMakeLists.txt  api.h  square_XX.h.t
lib/: CMakeLists.txt  qa_howtogen.cc  qa_howtogen.h  square_XX_impl.cc.t  square_XX_impl.h.t  test_howtogen.cc
python/: CMakeLists.txt  __init__.py  qa_square_bb.py  qa_square_cc.py  qa_square_ff.py  qa_square_ii.py  qa_square_ss.py  qa_square_xx.py
swig/: CMakeLists.txt  howtogen_swig.i
